# fastapi_example

./: DockerFile  main.py  pyproject.toml  readme.md  requirements.txt
app/db/: database_config.py
app/middleware/: jwt_auth.py
app/models/: user_model.py
app/routes/: health_check.py  login.py  start_stop_detection.py  user.py
app/services/: process_file.py
app/utils/: file_extraction_utility.py  jwt_utility.py
