[tool.poetry]
name = "enfinite-problem-statement"
version = "0.1.0"
description = ""
authors = ["sharukiln <gc.sharvari05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.2"
httpx = "0.27.2"
motor = "3.5.1"
numpy = "2.1.0"
pandas = "2.2.2"
pydantic = {version = "2.8.2", extras = ["email"]}
pyjwt = "2.9.0"
pymongo = "4.8.0"
requests = "2.32.3"
starlette = "0.38.2"
uvicorn = "0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
